hard-gists/f2bb0cc876828b54f2ed/run.log
=== Docker Run Log for f2bb0cc876828b54f2ed ===
Started at: Mi 29. Okt 21:24:21 CET 2025

[2025-10-29 21:24:22] START: Running container for f2bb0cc876828b54f2ed
[2025-10-29 21:24:22] SUCCESS: Container fd286c215391184377193f8ecfa727ced56965d1402965831141ebf730d00184 started for f2bb0cc876828b54f2ed
=== Container logs for f2bb0cc876828b54f2ed ===
  File "/snippet.py", line 89
    print "NEW DYNAMIC FILTER MODEL"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f2bb0cc876828b54f2ed ===
[2025-10-29 21:24:24] INFO: Container fd286c215391184377193f8ecfa727ced56965d1402965831141ebf730d00184 has stopped
